--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@preact/preset-vite": "^2.3.0",
     "preact": "^10.10.0",
     "preact-render-to-string": "^5.2.1",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "vite": "^4.0.3",
     "vike": "0.4.143"
   },
